--- a/frontend/src/components/modals/ReleaseModal.css
+++ b/frontend/src/components/modals/ReleaseModal.css
@@ -225,6 +225,12 @@
   margin-top: 0.25rem;
 }
 
+.required-indicator {
+  color: #dc2626;
+  font-weight: 600;
+  margin-left: 0.25rem;
+}
+
 .form-input,
 .form-textarea {
   width: 100%;
